# swe_simulator

./: .gitignore  README.md  environment.yml  forcing.py  mapper.py  pyproject.toml  requirements.txt  setup.py  sweSolver.py  utils.py
data/: gebco_2025_n25.9288_s25.6527_w-80.2016_e-80.0642.nc
docs/: getting-started.md
docs/classes/: providers.md  simulation_config.md  swe_solver.md  wind_forcing.md
examples/: FIU_near_beach.py  _inv_prob.py  _inverse_problem.py  biscayne_bay.py  gaussian_hump.py  inverse_problem.py  test_sweSolver.py
swe_simulator/: __init__.py  config.py  coordinate_mapper.py  exceptions.py  forcing.py  logging_config.py  result.py  solver.py
swe_simulator/providers/: __init__.py
swe_simulator/utils/: __init__.py  bathymetry.py  grid.py  io.py  validation.py  visualization.py
test_scripts/: swe2D_bath.py  test.py  test_bathy.py  test_swe2D_with_coords.py
tests/: __init__.py  conftest.py  swe2D.py  swe2D_bath.py  test_bathy.py  test_config.py  test_coordinate_mapper.py  test_forcing.py  test_providers.py  test_result.py  test_solver.py  test_swe2D_with_coords.py  test_sweSolver.py
tests/providers/: __init__.py  test_providers.py
tests/utils/: __init__.py  test_utils_bathymetry.py  test_utils_grid.py
tidalflow/: __init__.py  config.py  coordinate_mapper.py  forcing.py  logging_config.py  result.py
tidalflow/providers/: __init__.py  base.py  bathymetry.py  initial_condition.py  wind.py
tidalflow/utils/: __init__.py  bathymetry.py  grid.py  io.py  visualization.py
