[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidalflow-swe"
version = "0.1.0"
description = "A Python-based 2D Shallow Water Equations (SWE) solver using PyClaw for simulating storm surge, tsunami propagation, and coastal flooding scenarios."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jose Fuentes", email = "jfuen099@fiu.edu"}
]
keywords = ["shallow water equations", "SWE", "PyClaw", "flood simulation", "tsunami", "storm surge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "clawpack>=5.14.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "cartopy>=0.23.0",
    "xarray>=2024.0.0",
    "mpi4py>=4.0.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mpi>=0.6",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "jupyter>=1.0",
    "ipython>=8.0",
]

viz = [
    "cartopy>=0.23.0",
    "matplotlib>=3.8.0",
]

mpi = [
    "mpi4py>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Xioeng/TidalFlow-SWE"
Documentation = "https://github.com/Xioeng/TidalFlow-SWE/blob/main/README.md"
Repository = "https://github.com/Xioeng/TidalFlow-SWE.git"

[tool.setuptools]
packages = ["tidalflow"]

[tool.setuptools.package-data]
tidalflow = ["py.typed"]

[tool.black]
line-length = 70
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 70
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mpi: marks tests that require MPI",
]

[tool.coverage.run]
source = ["tidalflow"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
